--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.775.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
