--- a/package.json
+++ b/package.json
@@ -13,18 +13,28 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/jwk-to-pem": "^2.0.3",
-    "@types/node": "^20.11.16",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.17.28",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.775.0",
+    "@aws-sdk/client-s3": "^3.775.0",
+    "@aws-sdk/lib-dynamodb": "^3.775.0",
+    "@aws-sdk/s3-request-presigner": "^3.775.0",
+    "aws-sdk": "^2.1692.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
-    "socket.io": "^4.7.2"
+    "multer": "^1.4.5-lts.2",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
