--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
+    "jwks-rsa": "^3.2.0",
     "multer": "^1.4.5-lts.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
