--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/lib-dynamodb": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.775.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
