--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "license": "MIT",
   "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon src/app.ts"
+    "start": "nodemon src/app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Ives van Hoorne",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/jwk-to-pem": "^2.0.3",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.28",
+    "@types/supertest": "^6.0.3",
     "nodemon": "^3.0.3",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
